# devos-3

./: .env.example  .gitignore  CONTRIBUTING.md  GLOSSARIO.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/src/devos_api/: __init__.py  config.py  logging.py  main.py
apps/api/src/devos_api/db/: session.py
apps/api/src/devos_api/middleware/: tenant.py
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/web/src/: App.tsx  styles.css
apps/web/src/api/: client.ts
apps/worker/: README.md
docs/adr/: ADR-001-rls-isolamento.md  ADR-002-escalada-loop.md  ADR-003-autenticacao.md  template.md
docs/charter/: devos-3.0-carta-de-fundacao.md
docs/design/: rls-pattern.md
docs/model-routing/: capabilities-matrix-template.md  prompt-avaliacao-modelos-ia.md
docs/orders/leva-1/: os-00-indice-leva-1.md  os-01-codex-infra-ct130.md  os-02-cursor-fundacao.md  os-03-claudecode-adrs.md  os-04-gemini-repo-docs.md
docs/runbooks/: ct130.md  hermes-infra.md  onboarding-time.md
infra/: docker-compose.yml
infra/db/: alembic.ini
infra/db/alembic/: env.py
infra/db/alembic/versions/: 0001_identity.py  0002_rls.py
infra/postgres/: init-roles.sql
scripts/: seed_dev.py
tests/: conftest.py
tests/api/: test_health.py
tests/isolation/: test_tenant_isolation.py
