[project]
name = "devos-3"
version = "0.1.0"
description = "DevOS 3.0 — multi-tenant consolidation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps/api/src", "packages/shared-types/src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api/src", "packages/shared-types/src", "tests", "scripts", "infra/db"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"infra/db/alembic/versions/*.py" = ["E501"]


[tool.pyright]
include = ["apps/api/src", "packages/shared-types/src", "tests", "scripts", "infra/db"]
extraPaths = ["apps/api/src", "packages/shared-types/src"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "isolation: sacred tenant isolation suite (mandatory in CI)",
]
addopts = "-ra"
